Add safe zone trust boundaries and reputation cooldowns
Introduced trust boundaries for safe zones and cooldown mechanisms for reputation commands. Refactored related logic to improve maintainability and aligned player messages with configuration for dynamic updates.